--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" lang="de">
+<html lang="en">
 
 <head>
     <title>Image Gallery</title>
-    <meta name="description" content="BestSecret Product Image Gallery">
+    <meta name="description" content="Product Image Gallery">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="/src/style.scss">
 </head>
 
 <body>
-
-
-    <link rel="stylesheet" href="/src/style.scss">
     <div class="test">
         <h1>Test</h1>
     </div>
-
 </body>
+
+</html>
